--- a/styles.css
+++ b/styles.css
@@ -43,16 +43,27 @@ li {
     padding: 1em;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    display: flex;
+    align-items: center;
+}
+
+li img {
+    width: 50px;
+    height: 50px;
+    margin-right: 1em;
+    border-radius: 50%;
 }
 
 li a {
     color: #ffcc00;
     text-decoration: none;
     font-size: 1.5em;
+    margin-right: 1em;
 }
 
 li p {
     margin: 0.5em 0 0;
+    word-break: break-all;
 }
 
 footer {
